# ai-resume-builder

./: .dockerignore  .editorconfig  .gitignore  .gitmessage  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GITHUB_SETUP.md  GIT_WORKFLOW.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  docker-compose.docs.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup_github.sh
.github/: FUNDING.yml  README.md
.github/workflows/: ci-cd.yml
config/nginx/: resume_builder.conf
docs/: Dockerfile  README.md
docs/api/: reference.md
docs/architecture/: overview.md
docs/deployment/: production.md
docs/development/: setup.md
gdpr/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
gdpr/management/commands/: process_data_deletion.py
gdpr/migrations/: 0001_initial.py
gdpr/templates/gdpr/: dashboard.html  request_access.html  request_deletion.html
resume_builder/: adapters.py  models.py  urls.py  views.py
resume_builder/migrations/: 0001_initial.py
resume_builder/settings/: __init__.py  base.py  development.py  production.py
static/js/: resume-builder.js
two_factor/: apps.py  urls.py  views.py
two_factor/management/commands/: cleanup_2fa_devices.py
two_factor/templates/two_factor/: dashboard.html  setup.html  verify.html
