[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]

[project]
name = "ai-resume-builder"
description = "A cutting-edge platform for creating professional resumes with AI-powered enhancements"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Neo Astra", email = "neozero3303@gmail.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content"
]
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    "Django>=4.2.0",
    "djangorestframework>=3.14.0",
    "django-allauth>=0.51.0",
    "django-otp>=1.5.0",
    "qrcode>=7.3.1",
    "psycopg2-binary>=2.9.5",
    "redis>=4.5.1",
    "Pillow>=10.0.1",
    "requests>=2.31.0",
    "openai>=1.3.6",
    "celery>=5.2.7",
    "gunicorn>=20.1.0",
    "whitenoise>=6.4.0",
    "python-decouple>=3.8",
    "weasyprint>=58.1",
    "django-crispy-forms>=2.0",
    "django-cors-headers>=4.0.0"
]

[project.optional-dependencies]
dev = [
    "black>=23.1.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "pre-commit>=3.0.4",
    "pytest>=7.2.1",
    "pytest-django>=4.5.2",
    "pytest-cov>=4.0.0",
    "factory-boy>=3.2.1",
    "mock>=5.0.1",
    "sphinx>=6.1.3",
    "sphinx-rtd-theme>=1.2.0"
]

[project.urls]
Homepage = "https://github.com/neoastra303/ai-resume-builder"
Documentation = "https://github.com/neoastra303/ai-resume-builder/docs"
Repository = "https://github.com/neoastra303/ai-resume-builder.git"
Issues = "https://github.com/neoastra303/ai-resume-builder/issues"
Changelog = "https://github.com/neoastra303/ai-resume-builder/blob/master/CHANGELOG.md"

[tool.setuptools_scm]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["resume_builder", "gdpr", "two_factor"]
known_third_party = ["celery", "django", "factory", "openai", "pillow", "psycopg2", "pytest", "qrcode", "redis", "requests", "rest_framework", "setuptools", "weasyprint"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "resume_builder.settings.development"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "-v --tb=short"
testpaths = ["tests"]

[tool.coverage.run]
source = ["."]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "manage.py",
    "*/settings/*",
    "*/venv/*",
    "*/env/*"
]