[metadata]
name = ai-resume-builder
version = 1.0.0
description = A cutting-edge platform for creating professional resumes with AI-powered enhancements
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/neoastra303/ai-resume-builder
author = Neo Astra
author_email = neozero3303@gmail.com
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django>=4.2.0
    djangorestframework>=3.14.0
    django-allauth>=0.51.0
    django-otp>=1.5.0
    qrcode>=7.3.1
    psycopg2-binary>=2.9.5
    redis>=4.5.1
    Pillow>=10.0.1
    requests>=2.31.0
    openai>=1.3.6
    celery>=5.2.7
    gunicorn>=20.1.0
    whitenoise>=6.4.0
    python-decouple>=3.8
    weasyprint>=58.1
    django-crispy-forms>=2.0
    django-cors-headers>=4.0.0

[options.extras_require]
dev =
    black>=23.1.0
    flake8>=6.0.0
    isort>=5.12.0
    pre-commit>=3.0.4
    pytest>=7.2.1
    pytest-django>=4.5.2
    pytest-cov>=4.0.0
    factory-boy>=3.2.1
    mock>=5.0.1
    sphinx>=6.1.3
    sphinx-rtd-theme>=1.2.0

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude =
    .git,
    __pycache__,
    venv,
    .venv,
    env,
    .env,
    migrations,
    static,
    media,
    node_modules

[isort]
profile = black
multi_line_output = 3
line_length = 88
known_first_party = resume_builder,gdpr,two_factor
known_third_party = celery,django,factory,openai,pillow,psycopg2,pytest,qrcode,redis,requests,rest_framework,setuptools,weasyprint

[tool:pytest]
DJANGO_SETTINGS_MODULE = resume_builder.settings.development
python_files = tests.py test_*.py *_tests.py
addopts = -v --tb=short
testpaths = tests

[coverage:run]
source = .
omit =
    */migrations/*
    */tests/*
    manage.py
    */settings/*
    */venv/*
    */env/*